--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
   height: 100vh;
   font-family: Redaction-20-Regular, serif;
   font-size: 14px;
+  margin: 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -28,9 +29,6 @@ body {
   max-width: 700px;
 }
 
-.logo-icon {
-  max-width: 115px;
-}
 
 h1,
 h2,
@@ -47,6 +45,7 @@ nav {
 }
 
 .logo-icon {
+  max-width: 115px;
   margin-right: 12px;
 }
 
@@ -119,4 +118,61 @@ nav {
 
 #backrub {
   align-self: center;
+}
+
+@media (max-width:850px) {
+
+  body {
+    height: 100%;
+  }
+
+  .container {
+    padding: 0 10px;
+  }
+
+  nav {
+    padding: 20px 0;
+  }
+
+  .bar {
+    width: 100%;
+  }
+
+  .logo-icon {
+    width: 80px;
+  }
+
+  .title {
+    font-size: 28px;
+  }
+
+  .subtitle {
+    font-size: 12px;
+  }
+
+  .main-content {
+    width: 100%;
+  }
+
+  .project {
+    max-width: 100%;
+  }
+
+  .project-description {
+    font-size: 14px;
+  }
+
+  .project-icon {
+    max-width: 60px;
+    margin-right: 15px;
+  }
+
+  #steve {
+    align-self: start;
+  }
+
+  #backrub {
+    align-self: start;
+  }
+
 }
