--- a/style.css
+++ b/style.css
@@ -119,6 +119,21 @@ nav {
   font-size: 16px;
 }
 
+.project-author {
+  margin-top: 5px;
+  font-size: 12px;
+  color: #7F7BAA;
+}
+
+.project-author>a {
+  color: #7F7BAA;
+  text-decoration: none;
+}
+
+.project-author>a:hover {
+  text-decoration: underline;
+}
+
 .project-icon {
   max-width: 80px;
   align-self: center;
