--- a/cracked-wisdom/cracked.css
+++ b/cracked-wisdom/cracked.css
@@ -8,11 +8,14 @@
   position: relative;
   height: 500px;
   width: 500px;
-  margin-bottom: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.controls {
+  margin-top: 20px;
 }
 
 #button {
