--- a/resurrection/trm.css
+++ b/resurrection/trm.css
@@ -1,5 +1,5 @@
 .trm-content {
-  max-width: 1000px;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -79,4 +79,27 @@
   width: 100%;
   flex-direction: row;
   justify-content: space-between;
+}
+
+@media (max-width: 600px) {
+  .full-video {
+    margin: 0;
+  }
+
+  .film-plyr {
+    width: 100vw;
+  }
+
+  .trm-title {
+    font-size: 24px;
+  }
+
+  .trm-subtitle {
+    font-size: 18px;
+  }
+
+  .video-bar {
+    font-size: 14px;
+  }
+
 }
