--- a/resurrection/trm.css
+++ b/resurrection/trm.css
@@ -155,7 +155,7 @@
 
 .credits>ul {
   list-style-type: none;
-  padding: 0 25px;
+  padding: 0 70px;
   margin: 0;
   line-height: 1.3;
 }
@@ -187,12 +187,10 @@
 }
 
 @media (max-width: 800px) {
-  .trm-description>p {
-    padding: 0 40px;
-    font-size: 12px;
-  }
 
+  .trm-description>p,
   .credits>ul {
+    padding: 0 40px;
     font-size: 12px;
   }
 
@@ -248,6 +246,7 @@
 
   .credits>ul {
     font-size: 14px;
+    padding: 0 25px;
   }
 
   .trm-title-text {
