--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@
 body {
   width: 100%;
   font-family: Redaction-20-Regular, serif;
-  font-size: 14px;
+  font-size: 16px;
+  line-height: 1.3;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -136,6 +137,10 @@ nav {
   align-items: center;
 }
 
+.about-content {
+  margin: 40px 0;
+}
+
 .game-content {
   display: flex;
   width: 650px;
@@ -209,6 +214,17 @@ nav {
 
 #trm {
   align-self: start;
+}
+
+#about {
+  align-self: end;
+  width: 550px;
+}
+
+#about>.project-icon {
+  max-width: 50px;
+  margin-left: 15px;
+  margin-right: 35px;
 }
 
 .corner-wrapper {
@@ -311,6 +327,12 @@ nav {
     margin-right: 15px;
   }
 
+  #about>.project-icon {
+    max-width: 40px;
+    margin-left: 5px;
+    margin-right: 30px;
+  }
+
   #steve {
     align-self: start;
   }
@@ -325,6 +347,11 @@ nav {
 
   #cracked {
     align-self: start;
+  }
+
+  #about {
+    align-self: start;
+    width: 100%;
   }
 
   .footer-text {
